packages/ingest/container-rust/tests/ui/xmlspec/fail/invalid_text_except.stderr
error: inline { ... } is only valid for all_fragments() reducers
 --> tests/ui/xmlspec/fail/invalid_text_except.rs:8:13
  |
8 |             value: first_text() where tag("value") inline {
  |             ^^^^^
